add: 引入scss全局变量

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,1 +1,36 @@
-$bg:#426cdc;
+// 辅助色
+$success: #52D5BA;
+$warning: #FFAF2A;
+$danger: #FF4267;
+$info: #D7D9E6;
+
+// 备选颜色
+$navyBlue: #0890FE;
+$blue: #3EC3FC;
+$wathet: #E5F7FF;
+$royalBlue: #3629B7;
+$orange: #F9896B;
+$beige: #fff9f9;
+// $beige: #FFF0E6;
+$khaki: #FFAF2A;
+$roseRed: #FE597A;
+$label: antiquewhite;
+$carBg: #f1f1f8; // 中性色
+$carBg2: #dbe5fa; // 中性色
+
+$fontFontMain: #303133; // 主要文字
+$fontRoutine: #606266; // 常规文字
+$fontSecondary: #909399; // 次要文字
+$fontSeizeSeat: #C0C4CC; // 占位文字
+
+$border1: #DCDFE6; // 一级边框
+$border2: #E4E7ED; // 二级边框
+$border3: #EBEEF5; // 三级边框
+$border4: #F2F6FC; // 四级边框
+
+$uploadColor: #f7f8fa; // 上传按钮的颜色
+
+$basicsBlack: #000; // 基础黑色
+$basicsWrite: #fff; // 基础白色
+
+$transparent: Transparent; // 透明
